--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "build:prod": "ng build --deploy-url /mvp/"
   },
   "dependencies": {
     "@angular/animations": "11.0.4",
